--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </div>
   </center>
  <center>
-  <video width="160" height="120" controls  >
+  <video width="160" height="120" controls  autoplay="">
     <source src="bajrangdal.mp4" type="video/mp4">
   Your browser does not support the video tag.
   </video>
